--- a/src/containers/userPopup/userPopup.scss
+++ b/src/containers/userPopup/userPopup.scss
@@ -8,30 +8,15 @@
   z-index: 4;
   max-width: 400px;
   border: 1px solid coral;
-  color: red;
+  background-color: white;
 
-  .palettes-section {
-    border: 1px solid red;
-    height: 300px;
-    width: 80%;
-    overflow: scroll;
-  }
-  .palette-details {
-    display: flex;
-    justify-content: space-between;
-    margin: 0.2rem 0.4rem;
+  .form-section {
     border: 1px solid blue;
-  }
-  .palette-inputs {
     display: flex;
+    flex-direction: column;
   }
-  .palette-color {
-    height: 1.5rem;
-    min-width: 5rem;
-    margin-right: 0.5rem;
-    border: 1px solid black;
-  }
-  .editor-form {
+
+  .user-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,7 +24,26 @@
   }
 
   .editor-title {
-    margin: 0;
+    margin: 1rem auto;
+  }
+
+  .form-btns {
+    // border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+    width: 100%;
+  }
+
+  .form-btn {
+    background-color: coral;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 70%;
+    padding: 0.4rem;
+    margin: 0.2rem;
   }
 
   .popup-exit {
@@ -47,21 +51,8 @@
     right: -10px;
     top: -10px;
   }
-
-  .submit-btn {
-    border: 1px solid red;
-    background-color: coral;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    width: 70%;
-    padding: 0.5rem;
-    margin: 0.5rem;
-  }
-
-  .remove-btn {
-  }
 }
+
 .screen {
   position: absolute;
   top: 0;
@@ -69,4 +60,8 @@
   background-color: rgba(6, 16, 20, 0.658);
   height: 100%;
   width: 100vw;
+}
+
+button {
+  cursor: pointer;
 }
