--- a/src/containers/NavBar/NavBar.scss
+++ b/src/containers/NavBar/NavBar.scss
@@ -9,7 +9,7 @@
   background-color: white;
   border-bottom: 2px solid coral;
   box-shadow: -1px -5px 5px 6px rgba(0, 0, 0, 0.75);
-  .NavBar > h2 {
+  h2 {
     margin: 0.5rem;
     margin-left: 3.5rem;
     font-family: "Carter One", cursive;
