Incorporate new button styles and other generic updates

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,7 +4,6 @@
 	position: sticky;
 	top: 0;
 	width: 100%;
-	// height: 8vh;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -12,26 +11,20 @@
 	background-color: $color-primary;
 	border-bottom: 2px solid $color-accent;
 	box-shadow: -1px -5px 5px 6px rgba(0, 0, 0, 0.75);
-}
 
-.NavBar > h2 {
-	margin: 0.5rem;
-	margin-left: 3.5rem;
-	font-family: "Carter One", cursive;
-	color: coral;
-}
-
-.navbar-form {
-	margin-right: 3.5rem;
-}
-
-.navbar-form > button {
-	padding: 0.4rem 2.5rem;
-	margin: 0.2rem;
-	color: white;
-	background-color: coral;
-	border: 1px solid rgb(199, 94, 56);
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 14px;
+	h2 {
+		margin: 0.5rem;
+		margin-left: 3.5rem;
+		font-family: "Carter One", cursive;
+		color: coral;
+	}
+	.navbar-form {
+		display: flex;
+		margin-right: 3.5rem;
+	}
+	.navbar-form > button {
+		@include btn-style-1;
+		padding: 0.4rem 2.5rem;
+		margin: 0.2rem;
+	}
 }
