Update styles and naming for EditBarPartial

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -4,6 +4,7 @@
 	align-items: center;
 	background-color: $color-accent;
 	color: $color-primary;
+	padding: .1rem;
 	border-radius: 5px;
 	border: 1px solid $color-accent-dark;
 	transition: 0.03s all ease-in-out;
