Convert containers to scss, fix pathing, import main.scss file

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -1,6 +1,6 @@
-@import "../../_styles/variables.scss";
+@import "../../_styles/main.scss";
 
 .LandingPage {
-  border: 1px solid coral;
-  background-color: $primary-dark;
+	border: 1px solid coral;
+	background-color: $primary-dark;
 }
