--- a/src/_styles/mixins.scss
+++ b/src/_styles/mixins.scss
@@ -6,3 +6,25 @@
 		border: 1px solid $primary-dark;
 	}
 }
+
+@mixin btn-style-1 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: $primary-color;
+	color: $primary-light;
+	padding: .1rem;
+	border-radius: 5px;
+	border: 1px solid $primary-color-dark;
+	transition: 0.03s all ease-in-out;
+	font-size: 12px;
+	font-family: "Comfortaa", cursive;
+	font-weight: 800;
+	text-transform: uppercase;
+	&:active {
+		background-color: $primary-color-dark;
+	}
+	&:hover {
+		cursor: pointer;
+	}
+}
