--- a/src/_styles/variables.scss
+++ b/src/_styles/variables.scss
@@ -1,6 +1,7 @@
 $primary-dark: rgb(40, 48, 56);
 $primary-light: white;
 $primary-color: coral;
+$primary-color-dark: rgb(241, 107, 58);
 $font-1: "Lobster", cursive;
 $font-2: "Comfortaa", cursive;
 $font-3: "Carter One", cursive;
