Implement css grids, pass in scss variables where suitable, fix positioning issues

--- a/src/_screens/LandingPage/LandingPage.scss
+++ b/src/_screens/LandingPage/LandingPage.scss
@@ -1,6 +1,8 @@
 @import "../../_styles/main.scss";
 
 .LandingPage {
-	border: 1px solid coral;
+	grid-row: 2 / 3;
+	display: grid;
+	grid-template-rows: 3fr 1fr;
 	background-color: $primary-dark;
 }
