--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -6,10 +6,10 @@
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-	border-top: 1px solid coral;
-	border-bottom: 5px solid coral;
+	border-top: 1px solid $primary-color;
+	border-bottom: 5px solid $primary-color;
 	margin-bottom: 0.2rem;
-	background-color: white;
+	background-color: $primary-light;
 	z-index: 1;
 	min-height: 25vh;
 	.project-title {
@@ -18,9 +18,9 @@
 		top: -1.1rem;
 		left: 2.4rem;
 		padding: 0.5rem 2rem;
-		background-color: white;
+		background-color: $primary-light;
 		transform: skew(35deg) rotate(1.5deg);
-		background-color: coral;
+		background-color: $primary-color;
 	}
 
 	.dotted-line {
@@ -29,7 +29,7 @@
 		top: 0.5rem;
 		width: 100%;
 		height: 100px;
-		border-top: 1px dashed coral;
+		border-top: 1px dashed $primary-color;
 	}
 
 	.delete-wrapper {
@@ -37,8 +37,8 @@
 		z-index: 2;
 		top: -1.3rem;
 		right: 2rem;
-		border: 2px solid coral;
-		background-color: coral;
+		border: 2px solid $primary-color;
+		background-color: $primary-color;
 		padding: 1rem 0.3rem 0.3rem 0.3rem;
 		transform: skew(-15deg);
 	}
